make button text actionable

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
             <div class="deadline-banner">
                 Dien uw zienswijze in vóór 24 december 2025
             </div>
-            <a href="#actie" class="cta-button">Direct naar Template →</a>
+            <a href="#actie" class="cta-button">Dien nu uw zienswijze in →</a>
         </div>
     </header>
 
