--- a/index.html
+++ b/index.html
@@ -375,6 +375,7 @@
                     <div class="method-icon">🌐</div>
                     <h4>Online</h4>
                     <p>Vul het formulier in op de website van de gemeente. U kunt de template kopiëren en plakken, of als document uploaden.</p>
+                    <p><strong>Zaaknummer:</strong> Z25-128043</p>
                     <p><strong>Indienen met DigiD:</strong><br>
                     <a href="https://www.amstelveen.nl/zienswijze-indienen" target="_blank" style="color: #f39c12; font-weight: bold;">www.amstelveen.nl/zienswijze-indienen</a></p>
                 </div>
@@ -411,6 +412,7 @@
 [Datum: DD-MM-2025]
 
 Betreft: Zienswijze op concept-verkeersbesluit herinrichting Groenelaan
+Zaaknummer: Z25-128043
 
 Geachte college van burgemeester en wethouders,
 
