improve tempate ui

--- a/index.html
+++ b/index.html
@@ -401,12 +401,18 @@
             </div>
 
             <h3>Template Zienswijze</h3>
-            <p>Gebruik deze template voor alle drie de methoden. Voor online: kopieer en plak. Voor telefoon/post: print en vul in.</p>
+            <p><strong>Hieronder staat de volledige zienswijze die u kunt gebruiken:</strong></p>
+            <ul style="margin-bottom: 20px;">
+                <li><strong>Voor online indienen:</strong> Klik op "Kopieer Template" en plak in het formulier</li>
+                <li><strong>Voor post/telefoon:</strong> Klik op "Print Template", vul uw gegevens in en onderteken</li>
+            </ul>
 
             <div class="template-box">
                 <button class="copy-button" onclick="copyTemplate()">📋 Kopieer Template</button>
                 <button class="copy-button" onclick="printTemplate()" style="margin-left: 10px;">🖨️ Print Template</button>
-                <div class="template-text" id="templateText">[Uw naam]
+                <div style="background-color: white; padding: 30px; border-radius: 8px; margin-top: 20px; border: 3px solid #2d6a3e;">
+                    <h4 style="text-align: center; color: #1e4d2b; font-size: 1.3rem; margin-bottom: 30px; border-bottom: 2px solid #2d6a3e; padding-bottom: 10px;">ZIENSWIJZE GROENELAAN</h4>
+                    <div class="template-text" id="templateText">[Uw naam]
 [Uw adres]
 [Postcode en plaats]
 [Datum: DD-MM-2025]
@@ -438,6 +444,7 @@ Met vriendelijke groet,
 
 [Handtekening - alleen bij post/fysiek]
 [Uw naam]</div>
+                </div>
             </div>
         </section>
 
