--- a/index.html
+++ b/index.html
@@ -294,6 +294,35 @@
             scroll-margin-top: 20px;
         }
 
+        .update-notice {
+            background: linear-gradient(135deg, #fef5e7 0%, #ffeaa7 100%);
+            border: 3px solid #f39c12;
+            border-radius: 12px;
+            padding: 30px;
+            margin: 30px auto;
+            max-width: 900px;
+            box-shadow: 0 4px 15px rgba(243, 156, 18, 0.3);
+        }
+
+        .update-notice h3 {
+            color: #1e4d2b;
+            font-size: 1.8rem;
+            margin: 0 0 20px 0;
+            border-bottom: 2px solid #f39c12;
+            padding-bottom: 10px;
+        }
+
+        .update-notice p {
+            font-size: 1.1rem;
+            margin-bottom: 15px;
+            color: #2d3748;
+        }
+
+        .update-notice strong {
+            color: #1e4d2b;
+            font-weight: 700;
+        }
+
         @media (max-width: 768px) {
             header h1 {
                 font-size: 1.75rem;
@@ -330,6 +359,15 @@
     </header>
 
     <div class="container">
+        <div class="update-notice">
+            <h3>📢 Update: Uw democratisch recht</h3>
+            <p>De Wijkkoepel Groenelaan heeft opgeroepen om deze website niet te gebruiken bij het indienen van uw zienswijze. Wij willen benadrukken dat <strong>elke burger het wettelijk recht heeft om een zienswijze in te dienen</strong>.</p>
+
+            <p>Dit is een democratisch recht. U hoeft niemands toestemming om uw mening te delen met de gemeente. Lees de feiten, vorm uw eigen mening, en maak gebruik van uw recht als u zorgen heeft over de verkeersveiligheid.</p>
+
+            <p>Het indienen van een zienswijze is een officieel proces dat door de gemeente wordt gefaciliteerd voor alle burgers.</p>
+        </div>
+
         <section id="situatie" class="anchor-link">
             <h2>De Situatie</h2>
             <p>De gemeente Amstelveen is van plan om bij de herinrichting van de Groenelaan een rotonde aan te leggen. Dit terwijl wetenschappelijk onderzoek aantoont dat rotondes zeer gevaarlijk zijn voor fietsers, en ongevallen in Amstelveen zelf met 50% zijn gestegen.</p>
@@ -498,7 +536,7 @@ Met vriendelijke groet,
 
     <footer>
         <div class="container">
-            <p>Onafhankelijk burgerinitiatief • Laatste update: 5 december 2025</p>
+            <p>Onafhankelijk burgerinitiatief • Laatste update: 18 december 2025</p>
         </div>
     </footer>
 
