update the banner

--- a/index.html
+++ b/index.html
@@ -360,12 +360,12 @@
 
     <div class="container">
         <div class="update-notice">
-            <h3>📢 Update: Uw democratisch recht</h3>
-            <p>De Wijkkoepel Groenelaan heeft opgeroepen om deze website niet te gebruiken bij het indienen van uw zienswijze. Wij willen benadrukken dat <strong>elke burger het wettelijk recht heeft om een zienswijze in te dienen</strong>.</p>
+            <h3>📢 Update: Reactie op krantenartikel</h3>
+            <p>Deze website werd deze week besproken in het Amstelveens Nieuwsblad. De Wijkkoepel Groenelaan reageerde door op te roepen deze website niet te gebruiken bij het indienen van zienswijzen.</p>
 
-            <p>Dit is een democratisch recht. U hoeft niemands toestemming om uw mening te delen met de gemeente. Lees de feiten, vorm uw eigen mening, en maak gebruik van uw recht als u zorgen heeft over de verkeersveiligheid.</p>
+            <p>Wij willen benadrukken: elke burger heeft het wettelijk recht om een zienswijze in te dienen. Dit is een democratisch recht. U hoeft niemands toestemming om uw mening te delen met de gemeente.</p>
 
-            <p>Het indienen van een zienswijze is een officieel proces dat door de gemeente wordt gefaciliteerd voor alle burgers.</p>
+            <p>Lees de feiten, vorm uw eigen mening, en maak gebruik van uw recht als u zorgen heeft over de verkeersveiligheid.</p>
         </div>
 
         <section id="situatie" class="anchor-link">
@@ -536,7 +536,7 @@ Met vriendelijke groet,
 
     <footer>
         <div class="container">
-            <p>Onafhankelijk burgerinitiatief • Laatste update: 18 december 2025</p>
+            <p>Onafhankelijk burgerinitiatief • Laatste update: 19 december 2025</p>
         </div>
     </footer>
 
